Squish some bugs

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -279,6 +279,7 @@ button[type=submit], button.submitlike {
   padding: 20px 85px;
   margin: 40px auto 0;
   text-align: center;
+  width: 350px;
 }
 
 div.selector {
